--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Lider Taxi Hamkor">
+  <meta name="apple-mobile-web-app-title" content="Darrov hamkor">
   <link rel="apple-touch-icon" href="icons/splashTaxi.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="icons/splashTaxi.png"/>
 
-  <title>Lider Taxi Hamkor</title>
+  <title>Darrov Hamkor</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -37,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    const serviceWorkerVersion = "4056904163";
+    const serviceWorkerVersion = "817305938";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
